trying hammerjs for gestures

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
+    "hammerjs": "^2.0.8",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
@@ -36,6 +37,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.46",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
