--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@next/bundle-analyzer": "^14.2.15",
+    "@next/third-parties": "^14.2.15",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
