--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
@@ -40,6 +41,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
