--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
+    "googleapis": "^146.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
