--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "slim_beauty",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.5.2",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
