--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@vercel/kv": "^3.0.0",
+    "@vonage/auth": "^1.12.0",
     "@vonage/server-sdk": "^3.20.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
