--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@types/luxon": "^3.4.2",
     "@vercel/kv": "^3.0.0",
     "@vonage/auth": "^1.12.0",
     "@vonage/server-sdk": "^3.20.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "googleapis": "^146.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
+    "luxon": "^3.5.0",
     "next": "15.2.0",
     "react": "^19",
     "react-day-picker": "^8.10.1",
